GDHI-131 Update min width of world map header to avoid horizontal scrolling <Lahari/Arjun>

--- a/src/assets/stylesheets/components/_header.scss
+++ b/src/assets/stylesheets/components/_header.scss
@@ -201,6 +201,9 @@
     .sub-header-map-legend {
       width: 45%;
     }
+    .hd-element:nth-child(2) {
+      min-width: 120px;
+    }
     .hd-element:nth-child(3) {
       display: none;
     }
